--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,10 @@
   "settings": {
     "terminal.integrated.shell.linux": "/bin/bash"
   },
+  "features": {
+    "ghcr.io/devcontainers/features/python:1": {},
+    "ghcr.io/devcontainers/features/jupyter-server:1": {}
+  },
   "extensions": [
     "ms-python.python",
     "ms-toolsai.jupyter"
