--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -29,4 +29,5 @@ import pyarrow\n\
 import scipy\n" > /home/$NB_USER/.ipython/profile_default/startup/00-startup.py
 
 # Standard-Startbefehl
-CMD ["start-notebook.sh"]
+CMD ["jupyter", "notebook", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root"]
+
