--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,9 +5,6 @@
   "settings": {
     "terminal.integrated.shell.linux": "/bin/bash"
   },
-  "features": {
-    "ghcr.io/devcontainers/features/python:1": {}
-  },
   "extensions": [
     "ms-python.python",
     "ms-toolsai.jupyter"
@@ -18,5 +15,6 @@
       "onAutoForward": "openBrowser"
     }
   },
-  "forwardPorts": [8888]
+  "forwardPorts": [8888],
+  "postCreateCommand": "pip install -r /tmp/requirements.txt && jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --NotebookApp.token=''"
 }
