--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,5 +16,8 @@
     }
   },
   "forwardPorts": [8888],
-  "postCreateCommand": "pip install -r /tmp/requirements.txt && jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --NotebookApp.token=''"
+  "postCreateCommand": [
+    "pip install -r /tmp/requirements.txt", 
+    "jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --NotebookApp.token=''"
+  ]
 }
