--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,10 +11,11 @@
   ],
   "portsAttributes": {
     "8888": {
-      "label": "JupyterLab",
+      "label": "Jupyter",
       "onAutoForward": "openBrowser"
     }
   },
   "forwardPorts": [8888],
-  "postCreateCommand": "pip install -r /tmp/requirements.txt && jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --NotebookApp.token=''"
+  "overrideCommand": false,
+  "postCreateCommand": "pip install -r /tmp/requirements.txt"
 }
