--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,9 +9,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Wechsel zurück zum normalen User
 USER $NB_USER
 
-# Installiere Python-Abhängigkeiten
-COPY requirements.txt /tmp/requirements.txt
-RUN pip install --no-cache-dir -r /tmp/requirements.txt
+# Installiere Python-Abhängigkeiten (gibt's schon im PostCreateCommand)
+# COPY requirements.txt /tmp/requirements.txt
+# RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
 # IPython Startup Imports automatisch erstellen (schön formatiert)
 RUN mkdir -p /home/$NB_USER/.ipython/profile_default/startup && \
