--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "scipro-container",
   "dockerFile": ".devcontainer/Dockerfile",
-  "context": ".",
+  "context": "..",
   "settings": {
     "terminal.integrated.shell.linux": "/bin/bash"
   },
