--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,7 +12,7 @@ USER $NB_USER
 # Kopiere requirements.txt hinein!
 COPY .devcontainer/requirements.txt /tmp/requirements.txt
 
-# IPython Startup Imports automatisch erstellen (schön formatiert)
+# IPython Startup Imports automatisch erstellen
 RUN mkdir -p /home/$NB_USER/.ipython/profile_default/startup && \
     printf "import marimo\n\
 import pyflyby\n\
