--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -27,6 +27,10 @@ import polars as pl\n\
 import pyarrow\n\
 import scipy\n" > /home/$NB_USER/.ipython/profile_default/startup/00-startup.py
 
+# Hier fügen wir die Zeile ein, um die Warnung zu unterdrücken
+RUN echo "import warnings\nwarnings.filterwarnings('ignore', category=UserWarning, module='pyflyby')" > /home/$NB_USER/.ipython/profile_default/startup/01-ignore-pyflyby-warnings.py
+
+# Installiert die Python-Pakete aus der requirements.txt-Datei
 RUN pip install -r /tmp/requirements.txt
 
 # Standard-Startbefehl: Starte Jupyter Notebook und öffne das Verzeichnis
