--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,34 +1,57 @@
 # Benutze das offizielle Jupyter-Base-Image als Ausgangspunkt
+# Das jupyter/base-notebook ist ein vorgefertigtes Docker-Image, das Jupyter-Notebooks und grundlegende Python-Abhängigkeiten enthält.
+# Es stellt sicher, dass du eine voll funktionsfähige Jupyter-Umgebung hast, die du anpassen kannst.
 FROM jupyter/base-notebook:latest
 
-# Installiere zusätzliche Pakete als root (erforderlich für Systempakete)
+# Installiere zusätzliche Pakete, die für den Container benötigt werden
+# Wir wechseln hier zu 'root', um Systempakete zu installieren. Danach wechseln wir zurück zum Standardbenutzer 'nbuser'.
 USER root
-# Dieser Befehl installiert das Paket 'git' und führt eine Bereinigung der Paketlisten durch, um das Docker-Image kleiner zu machen
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    git && \
-    rm -rf /var/lib/apt/lists/*  # Entfernt die temporären Paketlisten, um das Image kleiner zu halten
+    git && \  # Git wird installiert, damit du Git-Repositories innerhalb des Containers verwenden kannst
+    rm -rf /var/lib/apt/lists/*  # Entfernt die Paketlisten, um den Container kleiner zu machen (sauberer Build)
 
-# Wechsel zurück zum Standard-Jupyter-Benutzer
+# Wechsel zurück zum Standardbenutzer von Jupyter, der "nbuser" heißt
+# Dies verhindert, dass während des Betriebs des Containers Sicherheitsprobleme auftreten, da root-Rechte nicht mehr benötigt werden.
 USER $NB_USER
-# $NB_USER ist die Umgebungsvariable, die auf den standardmäßigen Benutzer von Jupyter (in der Regel 'jovyan') verweist.
 
-# Kopiere die 'requirements.txt' Datei vom lokalen Projektordner in das Container-Dateisystem
+# Kopiere die requirements.txt in den Container, damit wir die benötigten Python-Abhängigkeiten installieren können
 COPY .devcontainer/requirements.txt /tmp/requirements.txt
-# Hier wird die Datei 'requirements.txt', die alle erforderlichen Python-Pakete listet, ins temporäre Verzeichnis '/tmp' im Container kopiert.
-# Dieser Schritt ist notwendig, um die Pakete aus dieser Datei im nächsten Schritt zu installieren.
 
-# Installiere die Python-Pakete aus der requirements.txt
+# Erstelle einen Ordner für die IPython Startup-Skripte
+# Jupyter-Notebooks führen automatisch alle Python-Importe aus, die in den Startup-Dateien enthalten sind.
+RUN mkdir -p /home/$NB_USER/.ipython/profile_default/startup && \
+    printf "import marimo\n\
+import pyflyby\n\
+import altair as alt\n\
+import hvplot\n\
+import matplotlib.pyplot as plt\n\
+import numba\n\
+import numpy as np\n\
+import pandas as pd\n\
+import plotly.express as px\n\
+import polars as pl\n\
+import pyarrow\n\
+import scipy\n" > /home/$NB_USER/.ipython/profile_default/startup/00-startup.py
+# Dies sorgt dafür, dass beim Starten von Jupyter-Notebooks alle genannten Bibliotheken automatisch importiert werden
+
+# Installiere die Python-Abhängigkeiten aus der requirements.txt
+# Hier werden alle Python-Pakete installiert, die du für dein Projekt benötigst.
 RUN pip install -r /tmp/requirements.txt
-# Der Befehl 'pip install -r /tmp/requirements.txt' installiert alle Python-Pakete, die in der 'requirements.txt' aufgelistet sind.
-# Die 'requirements.txt' enthält normalerweise Bibliotheken, die für dein Projekt erforderlich sind, wie z.B. 'pandas', 'numpy', etc.
 
-# Der Standard-Startbefehl für den Container
+# Installiere pyflyby, um die gewünschte Funktionalität sicherzustellen
+# Dies wird benötigt, um die pyflyby-Erweiterung für Jupyter zu installieren und zu konfigurieren.
+RUN pip install pyflyby && \
+    pyflyby.install_in_ipython_config_file
+# Diese Zeile sorgt dafür, dass pyflyby korrekt in die IPython-Konfiguration integriert wird, 
+# was notwendig ist, um die automatische Importfunktion von pyflyby zu ermöglichen.
+
+# Diese Zeile sorgt dafür, dass beim Starten von Jupyter Notebooks im Container keine Warnungen von pyflyby angezeigt werden
+RUN echo "import warnings\nwarnings.filterwarnings('ignore', category=UserWarning, module='pyflyby')" > /home/$NB_USER/.ipython/profile_default/startup/01-ignore-pyflyby-warnings.py
+
+# Standard-Startbefehl: Starte JupyterLab auf allen Schnittstellen (IP 0.0.0.0) und Port 8888
+# --ip=0.0.0.0 stellt sicher, dass Jupyter von allen IPs im Container erreichbar ist.
+# --port=8888 legt den Port fest, auf dem der Jupyter-Dienst läuft.
+# --no-browser verhindert, dass Jupyter automatisch einen neuen Browser öffnet (nützlich in einem Docker-Container).
+# --NotebookApp.token='' deaktiviert das Token, sodass du dich nicht mit einem Passwort anmelden musst.
+# --NotebookApp.notebook_dir=/workspaces/SC_EA1_bis_EA3 legt das Verzeichnis fest, das als Arbeitsverzeichnis dient.
 CMD ["jupyter", "lab", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--NotebookApp.token=''", "--NotebookApp.notebook_dir=/workspaces/SC_EA1_bis_EA3"]
-# Dieser Befehl startet den JupyterLab-Server, wenn der Container ausgeführt wird.
-# Erklärung der Optionen:
-# --ip=0.0.0.0: Jupyter wird auf allen IP-Adressen des Containers lauschen, sodass es von außen zugänglich ist.
-# --port=8888: Der JupyterLab-Server wird auf Port 8888 laufen.
-# --no-browser: Verhindert, dass Jupyter automatisch einen Browser öffnet.
-# --NotebookApp.token='': Dies deaktiviert die Token-Authentifizierung für den Zugriff auf das JupyterLab. (Sicherstellen, dass nur autorisierte Benutzer auf den Container zugreifen.)
-# --NotebookApp.notebook_dir=/workspaces/SC_EA1_bis_EA3: Legt das Verzeichnis fest, das als Arbeitsverzeichnis für JupyterLab verwendet wird. Alle Notebooks und Dateien in diesem Ordner werden angezeigt.
-
